tests/bad_programs/type_errors/int_lt_false.notc
int main() {
    if (3 < false) {
        return 0;
    } else {
        return 1;
    }
}
